--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <li><a href="#experience"> <span>Experience</span></a></li>
           <li><a href="#projects"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="#cv"> <span>CV</span></a></li>
+          <li><a href="#resume"> <span>Resume</span></a></li>
           <li><a href="#contact"> <span>Contact</span></a></li>
         </ul>
       </nav>
@@ -203,7 +203,7 @@
               <br> 
             </h4>
             <h5 style="text-align:left;"><em>Bachelor of Science in Computer Information Systems; <strong>GPA: 3.83/4.00</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>September 2019 - December 2020</em></span>
+            <span class="left" style="float:left;color:#fff;"><em>September 2018 - December 2020</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <h6 style="text-align:left;">Relevant coursework:</h6>
             <ul style="columns:2;text-align:left;">
@@ -279,7 +279,7 @@
               <a href="https://www.willscot.com/" target="_blank" style="color:#12d640">William Scottsman</a><br>
             </h4>
             <h5 style="text-align:left;"><em>Full Stack Developer</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>October 2021 - Apirl 2022</em></span>
+            <span class="left" style="float:left;color:#fff;"><em>October 2021 - April 2022</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
@@ -305,7 +305,7 @@
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
-                Wrote structued, tested, readable, and maintainable code.
+                Wrote structured, tested, readable, and maintainable code.
               </li>
               <li>
                 Helped maintain code quality, organization, and automatization for application.
@@ -323,7 +323,7 @@
               <a href="https://www.hyundaiusa.com/us/en" target="_blank" style="color:#12d640">Hyundai Fountaion Valley</a><br>
             </h4>
             <h5 style="text-align:left;"><em>Full Stack Developer</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>December 2018 - Apirl 2020</em></span>
+            <span class="left" style="float:left;color:#fff;"><em>December 2018 - April 2020</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
@@ -371,7 +371,7 @@
               <a href="https://aighospitals.com/" target="_blank" style="color:#12d640">AIG Hospitals</a><br>
             </h4>
             <h5 style="text-align:left;"><em>Frontend Developer</em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>November 2017 - June 2017</em></span>
+            <span class="left" style="float:left;color:#fff;"><em>November 2015 - June 2017</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
               <li>
@@ -701,24 +701,27 @@
 
 
 
-  <!-- ======= Start CV Section ======= -->
+  <!-- ======= Start Resume Section ======= -->
 
-  <section id="cv" class="services">
+  <section id="resume" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>CV</h2>
+        <h2>Resume</h2>
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1TGwMpZl6FDeQk1w_-EetbspCuzu16kCF/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a style="color:#12d640;" href="https://drive.google.com/file/d/1TGwMpZl6FDeQk1w_-EetbspCuzu16kCF/view?usp=sharing" target="_blank">Curriculum Vitae</a></h4>
-          <p class="description" style="color:#fff;">The above link contains my CV. Also, you can check out the code for this CV <a href="https://github.com/arasgungore/arasgungore-CV" target="_blank">here</a>.</p>
+          <a href="https://drive.google.com/file/d/1qJ0OstyUbq8y3lcz0exL9RwCwmf_p8Pu/view?usp=sharing" target="_blank">
+            <div class="icon"><i class="icofont-page"></i></div>
+          </a>
+          <h4 class="title">
+            <a style="color:#12d640;" href="https://drive.google.com/file/d/1qJ0OstyUbq8y3lcz0exL9RwCwmf_p8Pu/view?usp=sharing" target="_blank">Resume</a></h4>
+          <p class="description" style="color:#fff;">The above link contains my resume.</p>
         </div>
       </div>
     </div>
   </section>
   
-  <!-- ======= End CV Section ======= -->
+  <!-- ======= End Resume Section ======= -->
 
 
 
