--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <br> 
             </h4>
             <h5 style="text-align:left;"><em>Master of Science in Info Systems & Analytics; <strong>GPA: 3.78/4.00</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>November 2020 - December 2023 (Expected)</em></span>
+            <span class="left" style="float:left;color:#fff;"><em>November 2020 - Present</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <h6 style="text-align:left;">Relevant coursework:</h6>
             <ul style="columns:2;text-align:left;">
@@ -235,7 +235,7 @@
               <br>
             </h4>
             <h5 style="text-align:left;"><em>Associate in Arts; <strong>GPA: 3.89/4.00</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>September 2016 - August 2018</em></span>
+            <span class="left" style="float:left;color:#fff;"><em>September 2016 - May 2018</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <h6 style="text-align:left;">Relevant coursework:</h6>
             <ul style="columns:2;text-align:left;">
