update google tag manager

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 
   <!-- ======= Start Google Tag Manager ======= -->
 
+  <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-5BB8W2X');</script>
+  })(window,document,'script','dataLayer','GTM-5B5D9SN');</script>
+  <!-- End Google Tag Manager -->
 
   <!-- ======= End Google Tag Manager ======= -->
 
@@ -50,12 +52,12 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169007209-3"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TMS7X674GT"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-169007209-3');
+    gtag('config', 'G-TMS7X674GT');
   </script>
 
 
@@ -75,9 +77,10 @@
   
   <!-- ======= Start Google Tag Manager (noscript) ======= -->
 
-  <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-  </noscript>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5B5D9SN"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   
   <!-- ======= End Google Tag Manager (noscript) ======= -->
 
