reduce images size

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/about/photo.png" class="img-fluid" alt="">
+          <img src="assets/img/about/photo.png" class="img-fluid" alt="photo" width="400" height="320">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
@@ -231,7 +231,7 @@
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://www.fsw.edu/" target="_blank">
-              <img src="assets/img/education/FSW.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+              <img src="assets/img/education/FSW.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
             </a>
             <h4 style="text-align:left;">
               <a href="https://www.fsw.edu/" target="_blank" style="color:#12d640">Florida Southwestern State College</a>
@@ -276,7 +276,7 @@
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://www.willscot.com/" target="_blank">
-              <img src="assets/img/experience/william-scottsman.png" class="company-logo" />
+              <img src="assets/img/experience/william-scottsman.svg" class="company-logo" alt="william-scottsman" width="90" height="90"/>
             </a>
             <h4 style="text-align:left;">
               <a href="https://www.willscot.com/" target="_blank" style="color:#12d640">William Scottsman</a><br>
@@ -298,7 +298,7 @@
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://www.hyundaiusa.com/us/en" target="_blank">
-              <img src="assets/img/experience/dynamic-signal.jpg" class="company-logo" />
+              <img src="assets/img/experience/dynamic-signal.svg" class="company-logo" alt="dynamic-signal" width="90" height="90"/>
             </a>
             <h4 style="text-align:left;">
               <a href="https://www.hyundaiusa.com/us/en" target="_blank" style="color:#12d640">Dynamic Signal by Firstup</a><br>
@@ -320,7 +320,7 @@
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://www.hyundaiusa.com/us/en" target="_blank">
-              <img src="assets/img/experience/hyundai.jpg" class="company-logo" />
+              <img src="assets/img/experience/hyundai.svg" class="company-logo" alt="hyundai" width="90" height="90"/>
             </a>
             <h4 style="text-align:left;">
               <a href="https://www.hyundaiusa.com/us/en" target="_blank" style="color:#12d640">Hyundai Fountaion Valley</a><br>
@@ -344,7 +344,7 @@
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://fconline.foundationcenter.org/fdo-grantmaker-profile/?key=CENT491" target="_blank">
-              <img src="assets/img/experience/centene.jpeg" class="company-logo" />
+              <img src="assets/img/experience/centene.svg" class="company-logo" alt="Cenete" width="90" height="90"/>
             </a>
             <h4 style="text-align:left;">
               <a href="https://fconline.foundationcenter.org/fdo-grantmaker-profile/?key=CENT491" target="_blank" style="color:#12d640">Cenete Foundation for Quality Healthcare</a><br>
@@ -368,7 +368,7 @@
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://aighospitals.com/" target="_blank">
-              <img src="assets/img/experience/aig-hospital.jpg" class="company-logo" />
+              <img src="assets/img/experience/aig-hospital.svg" class="company-logo" alg="aig-hospital" width="90" height="90"/>
             </a>
             <h4 style="text-align:left;">
               <a href="https://aighospitals.com/" target="_blank" style="color:#12d640">AIG Hospitals</a><br>
