Fix performance issue

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         </ul>
       </nav>
       <div class="social-links">
-        <a href="mailto:ashrith.reddy@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
-        <a href="https://www.linkedin.com/in/ashrith-reddy" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://github.com/Ashrith1612" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="mailto:ashrith.reddy@gmail.com" target="_blank" class="google" aria-label="Send email"><i class="bx bxl-google"></i></a>
+        <a href="https://www.linkedin.com/in/ashrith-reddy" target="_blank" class="linkedin" aria-label="Go to Linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/Ashrith1612" target="_blank" class="github" aria-label="Go to GitHub"><i class="bx bxl-github"></i></a>
       </div>
     </div>
   </header>
@@ -126,9 +126,7 @@
 
   <section id="about" class="about">
     <div class="about-me container">
-      <div class="section-title">
-        <h2>About Me</h2>
-      </div>
+      <h2 class="section-title">About Me</h2>
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
           <img src="assets/img/about/photo.png" class="img-fluid" alt="photo" width="400" height="320">
@@ -161,14 +159,12 @@
 
   <section id="education" class="services">
     <div class="container">
-      <div class="section-title">
-        <h2>Education</h2>
-      </div>
+      <h2 class="section-title">Education</h2>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://www.fgcu.edu/" target="_blank">
-              <img src="assets/img/education/FGCU.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            <a href="https://www.fgcu.edu/" target="_blank" aria-label="Go to FGCU">
+              <img src="assets/img/education/FGCU.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90" height="90" alt="FGCU">
             </a>
             <h4 style="text-align:left;">
               <a href="https://www.fgcu.edu/" target="_blank" style="color:#12d640">Florida Gulf Coast University</a>
@@ -198,8 +194,8 @@
         </div>
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://www.fgcu.edu/" target="_blank">
-              <img src="assets/img/education/FGCU.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            <a href="https://www.fgcu.edu/" target="_blank" aria-label="Go to FGCU">
+              <img src="assets/img/education/FGCU.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90" height="90" alt="FGCU">
             </a>
             <h4 style="text-align:left;">
               <a href="https://www.fgcu.edu/" target="_blank" style="color:#12d640">Florida Gulf Coast University</a>
@@ -230,8 +226,8 @@
         </div>
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://www.fsw.edu/" target="_blank">
-              <img src="assets/img/education/FSW.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            <a href="https://www.fsw.edu/" target="_blank" aria-label="Go to FSW">
+              <img src="assets/img/education/FSW.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90" height="90" alt="FSW">
             </a>
             <h4 style="text-align:left;">
               <a href="https://www.fsw.edu/" target="_blank" style="color:#12d640">Florida Southwestern State College</a>
@@ -269,9 +265,7 @@
 
   <section id="experience" class="services">
     <div class="container">
-      <div class="section-title">
-        <h2>Experience</h2>
-      </div>
+      <h2 class="section-title">Experience</h2>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -367,8 +361,8 @@
             </ul>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://aighospitals.com/" target="_blank">
-              <img src="assets/img/experience/aig-hospital.svg" class="company-logo" alg="aig-hospital" width="90" height="90"/>
+            <a href="https://aighospitals.com/" target="_blank" aria-label="Go to AIG Hospitals">
+              <img src="assets/img/experience/aig-hospital.svg" class="company-logo" alt="aig-hospital" width="90" height="90"/>
             </a>
             <h4 style="text-align:left;">
               <a href="https://aighospitals.com/" target="_blank" style="color:#12d640">AIG Hospitals</a><br>
@@ -401,9 +395,7 @@
 
   <section id="projects" class="services">
     <div class="container">
-      <div class="section-title">
-        <h2>Projects</h2>
-      </div>
+      <h2 class="section-title">Projects</h2>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up" style="display:inline-block;">
           <div class="col-md-4 mt-8 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
@@ -447,9 +439,7 @@
 
   <section id="skills" class="services">
     <div class="container">
-      <div class="section-title">
-        <h2>Skills</h2>
-      </div>
+      <h2 class="section-title">Skills</h2>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -708,12 +698,10 @@
 
   <section id="resume" class="services">
     <div class="container">
-      <div class="section-title">
-        <h2>Resume</h2>
-      </div>
+      <h2 class="section-title">Resume</h2>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1qJ0OstyUbq8y3lcz0exL9RwCwmf_p8Pu/view?usp=sharing" target="_blank">
+          <a href="https://drive.google.com/file/d/1qJ0OstyUbq8y3lcz0exL9RwCwmf_p8Pu/view?usp=sharing" target="_blank" aria-label="Go to online resume">
             <div class="icon"><i class="icofont-page"></i></div>
           </a>
           <h4 class="title">
@@ -732,18 +720,16 @@
 
   <section id="contact" class="contact">
     <div class="container">
-      <div class="section-title">
-        <h2>Contact</h2>
-      </div>
+      <h2 class="section-title">Contact</h2>
       <div class="row">
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
             <h3 style="color:#12d640;">Social Profiles</h3>
             <div class="social-links">
-              <a href="mailto:ashrith.reddy@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
-              <a href="https://www.linkedin.com/in/ashrith-reddy" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://github.com/Ashrith1612" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="mailto:ashrith.reddy@gmail.com" target="_blank" class="google" aria-label="Send Email"><i class="bx bxl-google"></i></a>
+              <a href="https://www.linkedin.com/in/ashrith-reddy" target="_blank" class="linkedin" aria-label="Go to Linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://github.com/Ashrith1612" target="_blank" class="github" aria-label="Go to GitHub"><i class="bx bxl-github"></i></a>
             </div>
           </div>
         </div>
