--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Ashrith Reddy</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
+  <meta name="description" content="This is Ashrith Reddy portfolio including about me, educations, work histories, projects, resume, and contact information.">
 
 
   <!-- Google Fonts -->
