--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="container">
       <h2 class="section-title">Education</h2>
       <div class="row">
-        <div class="col-lg-12" data-aos="fade-up">
+        <!-- <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://www.fgcu.edu/" target="_blank" aria-label="Go to FGCU">
               <img src="assets/img/education/FGCU.svg" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90" height="90" alt="FGCU">
@@ -190,7 +190,7 @@
               <li>Web, Mobile, & Social Technol.</li>
             </ul>
           </div>
-        </div>
+        </div> -->
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://www.fgcu.edu/" target="_blank" aria-label="Go to FGCU">
