--- a/index.html
+++ b/index.html
@@ -130,14 +130,23 @@
         <div class="col-lg-4" data-aos="fade-right">
           <img src="assets/img/about/photo.png" class="img-fluid" alt="photo" width="400" height="320">
         </div>
-        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+        <div class="col-lg-8 pt-4 pt-lg-0" data-aos="fade-left">
           <p>
-            Hi there, my name is Ashrith Reddy. I am a Full Stack Developer with 7+ years of experience.
-            Experience in designing, developing, testing, and maintenance/operation of web applications.
-            Currently focused on creating great user experience in ReactJS.
+            Hi there, my name is Ashrith Reddy.
           </p>
+          <ul style="text-align:left;">
+            <li>
+              4+ years experienced React Developer with hands-on experience in identifying web-based user interactions along with designing &amp; implementing highly-responsive user interface components by deploying React concepts.
+            </li>
+            <li>
+              Proficient in translating designs &amp; wireframes into high-quality code, and writing application interface code via Javascript and ReactJS workflows.
+            </li>
+            <li>
+              Adept at monitoring &amp; maintaining frontend performance and troubleshooting &amp; debugging the same to bolster overall performance.
+            </li>
+          </ul>
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 content">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Fort Myers, FL, 33908</li>
                 <li><i class="icofont-rounded-right"></i> <strong>E&#8209;mail:</strong> ashrith.reddy@gmail.com</li>
@@ -296,7 +305,7 @@
             <h4 style="text-align:left;">
               <a href="https://www.hyundaiusa.com/us/en" target="_blank" style="color:#12d640">Dynamic Signal by Firstup</a><br>
             </h4>
-            <h5 style="text-align:left;"><em>Full Stack Developer</em></h5>
+            <h5 style="text-align:left;"><em>Frontend Developer</em></h5>
             <span class="left" style="float:left;color:#fff;"><em>May 2020 - September 2021</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <ul style="text-align:left;">
@@ -786,7 +795,7 @@
 
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["a Full Stack Developer", "a Web Expert"],
+      strings: ["a React Developer", "a Web Expert"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
