update resume link

--- a/index.html
+++ b/index.html
@@ -709,11 +709,11 @@
       <h2 class="section-title">Resume</h2>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1qJ0OstyUbq8y3lcz0exL9RwCwmf_p8Pu/view?usp=sharing" target="_blank" aria-label="Go to online resume">
+          <a href="https://drive.google.com/file/d/1snYKKQq-zbqyzScyEGBX4p7-GmThH6RU/view?usp=share_link" target="_blank" aria-label="Go to online resume">
             <div class="icon"><i class="icofont-page"></i></div>
           </a>
           <h4 class="title">
-            <a style="color:#12d640;" href="https://drive.google.com/file/d/1qJ0OstyUbq8y3lcz0exL9RwCwmf_p8Pu/view?usp=sharing" target="_blank">Resume</a></h4>
+            <a style="color:#12d640;" href="https://drive.google.com/file/d/1snYKKQq-zbqyzScyEGBX4p7-GmThH6RU/view?usp=share_link" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The above link contains my resume.</p>
         </div>
       </div>
