--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
   <!-- Vendor CSS Files -->
 
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -404,38 +405,59 @@
   <section id="projects" class="services">
     <div class="container">
       <h2 class="section-title">Projects</h2>
-      <div class="row">
-        <div class="col-lg-12" data-aos="fade-up" style="display:inline-block;">
-          <div class="col-md-4 mt-8 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
-            <a href="https://github.com/Ashrith1612/Prolog-App" target="_blank" rel="noreferrer">
-              <img class="project-image" src="assets/img/projects/prolog.png" alt="Prolog">
-              <h5 style="padding-top:8px;color:#12d640"><strong>Prolog</strong></h5>
-            </a>
-            <p style="padding: 8px;margin-bottom: 8px;color:#fff;">The application is an error logging and monitoring tool similar to Sentry or Rollbar.</p>
+      <!-- <div class="row gx-4 gy-4"> -->
+        <div class="row gx-4 gy-4" data-aos="fade-up">
+          <div class="col-lg-6 col-md-12 mt-8" data-aos="fade-up" data-aos-delay="100">
+            <div class="project-card">
+              <img class="project-image" src="assets/img/projects/willscot.png" alt="Prolog">
+              <div class="content">
+                <h5 style="padding-top:8px;color:#12d640"><strong>William Scottsman</strong></h5>
+                <p style="padding: 8px;margin-bottom: 8px;color:#fff;">
+                  For over 60 years, WillScot has been the leader in mobile offices, portable storage containers, 
+                  modular classrooms, and various specialty temporary space solutions.
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
-            <a href="https://github.com/Ashrith1612/Mortgage-Calculator" target="_blank" rel="noreferrer">
-              <img class="project-image" src="assets/img/projects/mortgage.png" alt="Mortgage">
-              <h5 style="padding-top:8px;color:#12d640"><strong>Mortgage</strong></h5>
-            </a>
-            <p style="padding: 8px;margin-bottom: 8px;color:#fff;">Mortgage overpayment calculator using React with Hooks and D3.</p>
+          <div class="col-lg-6 col-md-12 mt-8" data-aos="fade-up" data-aos-delay="100">
+            <div class="project-card">
+              <img class="project-image" src="assets/img/projects/dynamic-signal.png" alt="Prolog">
+              <div class="content">
+                <h5 style="padding-top:8px;color:#12d640"><strong>Dynamic Signal by Firstup</strong></h5>
+                <p style="padding: 8px;margin-bottom: 8px;color:#fff;">
+                  Dynamic Signal. A new name, but the same commitment to connecting every worker, 
+                  everywhere with the right information at the right time. Firstup.
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
-            <a href="https://github.com/Ashrith1612/React-Messenger" target="_blank" rel="noreferrer">
-              <img class="project-image" src="assets/img/projects/messenger.png" alt="Messenger">
-              <h5 style="padding-top:8px;color:#12d640"><strong>Funny Messenger</strong></h5>
-            </a>
-            <p style="padding: 8px;margin-bottom: 8px;color:#fff;">A one-to-one realtime chat app using React, Node.js, and PostgreSQL.</p>
+          <div class="col-lg-6 col-md-12 mt-8" data-aos="fade-up" data-aos-delay="100">
+            <div class="project-card">
+              <img class="project-image" src="assets/img/projects/hyundai.png" alt="Prolog">
+              <div class="content">
+                <h5 style="padding-top:8px;color:#12d640"><strong>Hyundai Fountain Valley</strong></h5>
+                <p style="padding: 8px;margin-bottom: 8px;color:#fff;">
+                  Official site for Hyundai Motor America. Explore our new models, features, offers, MPG, 
+                  and find dealer information all at Hyundaiusa.com.
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px;display:inline-block;">
-            <a href="https://github.com/Ashrith1612/TodoList" target="_blank" rel="noreferrer">
-              <img class="project-image" src="assets/img/projects/todoist.png" alt="TodoList">
-              <h5 style="padding-top:8px;color:#12d640"><strong>TodoList</strong></h5>
-            </a>
-            <p style="padding: 8px;margin-bottom: 8px;color:#fff;">Building TodoList from Scratch Using React (Custom Hooks, Context), Firebase & React Testing Library.</p>
+          <div class="col-lg-6 col-md-12 mt-8" data-aos="fade-up" data-aos-delay="100">
+            <div class="project-card">
+              <img class="project-image" src="assets/img/projects/aig-hospitals.png" alt="Prolog">
+              <div class="content">
+                <h5 style="padding-top:8px;color:#12d640"><strong>AIG Hospitals</strong></h5>
+                <p style="padding: 8px;margin-bottom: 8px;color:#fff;">
+                  AIG Hospitals is a Top multispeciality hospital in Hyderabad | Gachibowli, India and provides 
+                  world-class treatment including heart, liver, kidney transplants, cancer surgeries and radiation 
+                  therapy, and minimally invasive robotic surgeries.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
     </div>
   </section>
 
@@ -785,7 +807,8 @@
   <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
   <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/counterup/counterup.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
