--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <br> 
             </h4>
             <h5 style="text-align:left;"><em>Bachelor of Science in Computer Information Systems; <strong>GPA: 3.83/4.00</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>September 2018 - December 2020</em></span>
+            <span class="left" style="float:left;color:#fff;"><em>December 2020</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <h6 style="text-align:left;">Relevant coursework:</h6>
             <ul style="columns:2;text-align:left;">
@@ -243,7 +243,7 @@
               <br>
             </h4>
             <h5 style="text-align:left;"><em>Associate in Arts; <strong>GPA: 3.89/4.00</strong></em></h5>
-            <span class="left" style="float:left;color:#fff;"><em>September 2016 - May 2018</em></span>
+            <span class="left" style="float:left;color:#fff;"><em>May 2018</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Florida, US</em></span><br><br>
             <h6 style="text-align:left;">Relevant coursework:</h6>
             <ul style="columns:2;text-align:left;">
@@ -732,11 +732,11 @@
       <h2 class="section-title">Resume</h2>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1snYKKQq-zbqyzScyEGBX4p7-GmThH6RU/view?usp=share_link" target="_blank" aria-label="Go to online resume">
+          <a href="https://drive.google.com/file/d/1VHvwpUAovpeLS9CAab6yI5EuMennYfHj/view?usp=sharing" target="_blank" aria-label="Go to online resume">
             <div class="icon"><i class="icofont-page"></i></div>
           </a>
           <h4 class="title">
-            <a style="color:#12d640;" href="https://drive.google.com/file/d/1snYKKQq-zbqyzScyEGBX4p7-GmThH6RU/view?usp=share_link" target="_blank">Resume</a></h4>
+            <a style="color:#12d640;" href="https://drive.google.com/file/d/1VHvwpUAovpeLS9CAab6yI5EuMennYfHj/view?usp=sharing" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The above link contains my resume.</p>
         </div>
       </div>
